--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-streamlit==1.35.0
-pandas==2.1.4
-numpy==1.26.4
-joblib==1.2.0
-scikit-learn==1.5.1
-plotly==5.9.0
+#streamlit==1.35.0
+#pandas==2.1.4
+#numpy==1.26.4
+#joblib==1.2.0
+#scikit-learn==1.5.1
+#plotly==5.9.0
 #distutils==3.11.7
+streamlit
+pandas
+numpy
+scikit-learn>=1.2.0
+joblib>=1.3.0
+plotly
+setuptools>=65.5.0
