--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@
 #scikit-learn==1.5.1
 #plotly==5.9.0
 #distutils==3.11.7
-streamlit
-pandas
-numpy
+streamlit==1.35.0
+pandas==2.1.4
+numpy==1.26.4
 scikit-learn>=1.2.0
 joblib>=1.3.0
-plotly
+plotly==5.9.0
 setuptools>=65.5.0
 dill
-keras
-tensorflow
+keras==3.4.1
+tensorflow==2.16.2
