--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@ numpy==1.26.4
 scikit-learn>=1.2.0
 joblib>=1.3.0
 plotly==5.9.0
-setuptools>=65.5.0
-dill
-keras==3.4.1
+#setuptools>=65.5.0
+#dill
+keras-tuner
 tensorflow==2.16.2
-openpyxl
-scikeras
+#openpyxl
+#scikeras
 #tensorflow-cpu==2.10.0
