--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
-#streamlit==1.35.0
-#pandas==2.1.4
-#numpy==1.26.4
-#joblib==1.2.0
-#scikit-learn==1.5.1
-#plotly==5.9.0
-#distutils==3.11.7
-pip install --upgrade pip
-pip install tensorflow-cpu
 streamlit==1.35.0
 pandas==2.1.4
 numpy==1.26.4
-scikit-learn>=1.2.0
 joblib>=1.3.0
+scikit-learn>=1.2.0
+keras-tuner
+tensorflow-cpu
+tensorflow==2.16.2
 plotly==5.9.0
 #setuptools>=65.5.0
 dill
-keras-tuner
-tensorflow==2.16.2
-#openpyxl
-#scikeras
-#tensorflow-cpu==2.10.0
+
+
