--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ streamlit==1.35.0
 pandas==2.1.4
 numpy==1.26.4
 joblib>=1.3.0
-scikit-learn>=1.2.0
-keras-tuner
+h5py
+scikit-learn>=1.4.2
+keras>=3.2.0
 tensorflow-cpu
 tensorflow==2.16.2
 plotly==5.9.0
