--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-$ pip install streamlit --upgrade
 streamlit==1.35.0
 pandas==2.1.4
 numpy==1.26.4
@@ -6,7 +5,7 @@ joblib>=1.3.0
 h5py
 scikit-learn>=1.4.2
 keras>=3.2.0
-tensorflow-cpu
+#tensorflow-cpu
 tensorflow==2.16.2
 plotly==5.9.0
 #setuptools>=65.5.0
