--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ joblib>=1.3.0
 h5py
 scikit-learn>=1.4.2
 keras>=3.2.0
-#tensorflow-cpu
+tensorflow-cpu
 tensorflow==2.16.2
 plotly==5.9.0
 #setuptools>=65.5.0
