--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,9 @@ pandas==2.1.4
 numpy==1.26.4
 joblib>=1.3.0
 h5py
-scikit-learn>=1.4.2
-keras>=3.2.0
+scikit-learn==1.5.2
+keras==3.4.1
 tensorflow==2.16.2
-plotly==5.9.0
+plotly==5.24.1
 #setuptools>=65.5.0
-dill
-
 
