--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ streamlit==1.39.0
 pandas==2.1.4
 numpy==1.26.4
 joblib==1.4.2
-h5py==3.10.0
-scikit-learn==1.4.1.post1
+#h5py==3.10.0
+scikit-learn==1.4.1
 keras==3.4.1
 tensorflow-cpu==2.16.2
 plotly==5.24.1
