--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ joblib==1.4.2
 h5py==3.10.0
 scikit-learn==1.4.1
 keras==3.4.1
-tensorflow-cpu==2.16.2
+tensorflow==2.16.2
 plotly==5.24.1
 #setuptools>=65.5.0
 
