--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-streamlit==1.39.0
-pandas==2.1.4
-numpy==1.26.4
-joblib==1.4.2
-h5py
-scikit-learn==1.5.2
-keras==3.4.1
-tensorflow==2.16.2
-#tensorflow-cpu
-plotly==5.24.1
-#setuptools>=65.5.0
-
-
 #streamlit==1.39.0
 #pandas==2.1.4
 #numpy==1.26.4
 #joblib==1.4.2
-#h5py==3.10.0
+#h5py
 #scikit-learn==1.5.2
 #keras==3.4.1
 #tensorflow==2.16.2
+##tensorflow-cpu
 #plotly==5.24.1
+##setuptools>=65.5.0
+
+
+streamlit
+pandas
+numpy
+joblib
+h5py
+scikit-learn
+keras
+tensorflow
+plotly
 #setuptools>=65.5.0
 
