--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy==1.26.4
 joblib==1.4.2
 #h5py
 scikit-learn==1.5.2
-keras==1.4.7
+keras_tuner==1.4.7
 tensorflow==2.16.2
 ##tensorflow-cpu
 plotly==5.24.1
