--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy==1.26.4
 joblib==1.4.2
 h5py
 scikit-learn==1.5.2
-tensorflow<=2.11
+tensorflow>=2.11
 keras==3.4.1
 ##tensorflow-cpu
 plotly==5.24.1
