--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 streamlit==1.39.0
 pandas==2.1.4
 numpy==1.26.4
-plotly
+joblib==1.4.2
+h5py
+scikit-learn==1.5.2
+tensorflow==2.16.2
+keras==3.4.1
+plotly==5.24.1
 streamlit-plotly-events
 
 
